implementation of view. adding the first components. panel styling

--- a/src/components/CanvasTools/CanvasTools.module.css
+++ b/src/components/CanvasTools/CanvasTools.module.css
@@ -1,6 +1,6 @@
 .canvasTools
 {
-    width: (100% - 80px);
-    height: 80px;    
+    height: 50px;    
     background-color: #242631;
+    border-top: 1px solid #353948;
 }
