--- a/src/components/NavigationBar/NavigationBar.module.css
+++ b/src/components/NavigationBar/NavigationBar.module.css
@@ -1,6 +1,7 @@
 .navbar
 {
     width: 100%;
-    height: 80px;
+    height: 55px;
     background-color: #242631;
+    border-bottom: 1px solid #353948;
 }
