--- a/src/components/NavigationBar/NavigationBar.module.css
+++ b/src/components/NavigationBar/NavigationBar.module.css
@@ -1,7 +1,46 @@
 .navbar
 {
+    display: flex;
+    justify-content: space-between;
     width: 100%;
     height: 55px;
     background-color: #242631;
     border-bottom: 1px solid #353948;
+}
+
+.button__layout
+{
+    display: flex;
+    margin-right: calc(100% - 61%);
+}
+
+.list_element
+{
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 8px;
+    margin-left: 10px;
+    width: 150px;
+    height: 25px;    
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.list_element:hover
+{
+    background: #2e313f;
+}
+
+.list_image
+{
+    margin-left: 10px;
+    margin-top: 3px;
+    width: 16px;
+    height: 16px;
+}
+
+.list_text
+{
+    margin-left: 14px;
+    color: #f1f1f1;
 }
