--- a/src/components/PrimaryPanel/Editor/Customize/Customize.module.css
+++ b/src/components/PrimaryPanel/Editor/Customize/Customize.module.css
@@ -92,3 +92,14 @@
     filter: drop-shadow(0 0 1px rgba(0,0,0,.5));
 }
 
+.pickerWrap
+{
+    position: relative;
+    top: -80px;
+    left: 75px;
+    border-radius: 13px;
+    width: 250px;
+    height: 300px;
+    background: #242631;
+    box-shadow: 0px 2px 10px rgba(0,0,0,.8);
+}
