--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -15,3 +15,25 @@
 {
     transition: 0.3s;
 }
+
+.shadow
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: #000;
+    opacity: 0.5;
+    z-index: 30;
+}
+
+.viewOff
+{
+    display: none;
+}
+
+.viewOn
+{
+    display: block;
+}
