--- a/src/components/Workspace/ColorPicker/ColorPicker.module.css
+++ b/src/components/Workspace/ColorPicker/ColorPicker.module.css
@@ -2,7 +2,7 @@
 {
     padding-left: 20px;
     padding-top: 8px;
+    padding-bottom: 8px;
     color: #8a9dff;
     border-bottom: 1px solid #353948;
-
 }
