--- a/src/components/PrimaryPanel/Editor/Templates/Templates.module.css
+++ b/src/components/PrimaryPanel/Editor/Templates/Templates.module.css
@@ -6,3 +6,27 @@
     margin-left: 27px;
     color: #f1f1f1;
 }
+
+.button
+{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-left: 25px;
+    width: 220px;
+    height: 30px;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #8a9dff;
+}
+
+.button:hover
+{
+    background-color: #647dff;
+}
+
+.text
+{
+    color: #000;
+    margin-top: 3px;
+}
